--- a/package.json
+++ b/package.json
@@ -1,11 +1,16 @@
 {
-	"name": "ULPCookies",
+	"name": "@UnderLabPC/ULPCookies",
+	"main": "ULPCookies.js",
 	"version": "0.1.3",
-	"license": "BSD-2-Clause",
+	"license": "BSD 2-Clause",
 	"author": "UnderLabPC <https://underlabpc.net>",
 	"contributors": [
 		"KF-NW        <https://github.com/KF-NW>",
 		"TheBloggist  <https://github.com/BloggerAnks>",
 		"TheFrieLancr <https://github.com/TheFrieLancr>"
-	]
+	],
+	"description": "Server app that uses the ORGANIZATION_NAME/PACKAGE_NAME package",
+	"dependencies": {
+		"ORGANIZATION_NAME/PACKAGE_NAME": ""
+	}
 }
